@@ -2,6 +2,8 @@ Mahout Change Log
 
 Release 1.0 - unreleased
 
+  MAHOUT-1572: blockify() to detect (naively) the data sparsity in the loaded data (dlyubimov)
+
   MAHOUT-1571: Functional Views are not serialized as dense/sparse correctly (dlyubimov)
 
   MAHOUT-1566: (Experimental) Regular ALS factorizer with conversion tests, optimizer enhancements and bug fixes (dlyubimov)
